# osgGISPlugins

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  LICENSE  Readme.md  build.bat  build.sh  vcpkg.json
include/3dtiles/: B3DMTile.h  BoundingVolume.h  GeometricError.h  I3DMTile.h  OctreeBuilder.h  Output3DTiles.h  QuadTreeBuilder.h  Tile.h  TileNode.h  Tileset.h  TreeBuilder.h  Write3DTiles.h
include/3dtiles/hlod/: KDTreeBuilder.h  OcTreeBuilder.h  OctreeBuilder.h  QuadTreeBuilder.h  QuadtreeBuilder.h  TreeBuilder.h
include/3dtiles/optimizer/: MeshOptimizer.h  MeshOptimizerBase.h  MeshOptimizerVisitor.h  MeshSimplifier.h  MeshSimplifierBase.h
include/3dtiles/optimizer/mesh/: FlattenTransformVisitor.h  MeshOptimizer.h  MeshOptimizerBase.h  PmpMeshOptimizer.h
include/3dtiles/optimizer/texture/: TexturePacker.h
include/gltf/: Extensions.h  Osgb2Gltf.h
include/gltf/compress/: GltfComporessor.h
include/gltf/material/: GltfMaterial.h  GltfPbrMRMaterial.h  GltfPbrSGMaterial.h
include/gltf/merge/: GltfMerge.h
include/osgdb_b3dm/: ReaderWriterB3DM.h
include/osgdb_fbx/: ReaderWriterFBX.h  WriterCompareTriangle.h  WriterNodeVisitor.h  fbxMaterialToOsgStateSet.h  fbxReader.h
include/osgdb_gltf/: Extensions.h  GltfMerger.h  GltfOptimizer.h  GltfOptimizerManager.h  GltfProcessor.h  GltfProcessorManager.h  Osg2Gltf.h  Osgb2Gltf.h  ReaderWriterGLTF.h
include/osgdb_gltf/b3dm/: B3DM.h  BatchIdVisitor.h  BatchTableHierarchy.h  ThreeDModelHeader.h  UserDataVisitor.h
include/osgdb_gltf/compress/: GltfCompressor.h  GltfDracoCompressor.h  GltfMeshOptCompressor.h  GltfMeshQuantizeCompressor.h
include/osgdb_gltf/material/: GltfMaterial.h  GltfPbrMRMaterial.h  GltfPbrSGMaterial.h
include/osgdb_gltf/merge/: GltfMerge.h
include/osgdb_ktx/: LoadTextureKTX.h  ReaderWriterKTX.h
include/osgdb_webp/: ReaderWriterWebP.h
include/utils/: ComputeObbBoundsVisitor.h  CustomSimplify.h  FlattenTransformVisitor.h  GltfMaterial.h  GltfOptimizer.h  GltfPbrMetallicRoughnessMaterial.h  GltfPbrSpecularGlossinessMaterial.h  GltfUtils.h  ObbVisitor.h  OsgToGltf.h  Simplifier.h  SimplifyIndices.h  TextureAtlas.h  TextureOptimizer.h  TextureOptimizier.h  TexturePacker.h  UUID.h  Utils.h
src/: CMakeLists.txt
src/3dtiles/: B3DMTile.cpp  BoundingVolume.cpp  I3DMTile.cpp  Tile.cpp  Tileset.cpp
src/3dtiles/hlod/: KDtreeBuilder.cpp  OctreeBuilder.cpp  QuadtreeBuilder.cpp  TreeBuilder.cpp
src/3dtiles/optimizer/: MeshOptimizer.cpp  MeshOptimizerBase.cpp  MeshOptimizerVisitor.cpp  MeshSimplifier.cpp  MeshSimplifierBase.cpp
src/3dtiles/optimizer/mesh/: FlattenTransformVisitor.cpp  MeshOptimizer.cpp  MeshOptimizerBase.cpp  MeshOptimizerVisitor.cpp  PmpMeshOptimizer.cpp
src/3dtiles/optimizer/texture/: TexturePacker.cpp
src/gltf/: Osgb2Gltf.cpp
src/gltf/material/: GltfMaterial.cpp  GltfPbrMRMaterial.cpp  GltfPbrSGMaterial.cpp
src/gltf/merge/: GltfMerge.cpp
src/osgdb_b3dm/: CMakeLists.txt  ReaderWriterB3DM.cpp
src/osgdb_fbx/: CMakeLists.txt  ReaderWriterFBX.cpp  WriterCompareTriangle.cpp  WriterNodeVisitor.cpp  fbxMaterialToOsgStateSet.cpp  fbxRAnimation.cpp  fbxRCamera.cpp  fbxRLight.cpp  fbxRMesh.cpp  fbxRNode.cpp
src/osgdb_gltf/: CMakeLists.txt  GltfMerger.cpp  GltfOptimizer.cpp  GltfProcessor.cpp  Osg2Gltf.cpp  Osgb2Gltf.cpp  ReaderWriterGLTF.cpp
src/osgdb_gltf/b3dm/: BatchIdVisitor.cpp  BatchTableHierarchy.cpp
src/osgdb_gltf/compress/: GltfCompressor.cpp  GltfDracoCompressor.cpp  GltfMeshOptCompressor.cpp  GltfMeshQuantizeCompressor.cpp
src/osgdb_gltf/material/: GltfMaterial.cpp  GltfPbrMRMaterial.cpp  GltfPbrSGMaterial.cpp
src/osgdb_gltf/merge/: GltfMerge.cpp
src/osgdb_ktx/: CMakeLists.txt  LoadTextureKTX.cpp  ReaderWriterKTX.cpp
src/osgdb_webp/: CMakeLists.txt  ReaderWriterWebP.cpp
src/utils/: FlattenTransformVisitor.cpp  GltfOptimizer.cpp  ObbVisitor.cpp  Simplifier.cpp  TextureOptimizer.cpp  TexturePacker.cpp  Utils.cpp
test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/3dtiles/: CMakeLists.txt  TreeBuilder.h  main.cpp
tests/osgdb_b3dm/: CMakeLists.txt
tests/osgdb_fbx/: CMakeLists.txt  main.cpp
tests/osgdb_gltf/: CMakeLists.txt  main.cpp
tests/osgdb_ktx/: CMakeLists.txt  main.cpp
tests/osgdb_webp/: CMakeLists.txt
tools/: CMakeLists.txt  CmakeLists.txt
tools/b3dm2glb/: CMakeLists.txt  main.cpp
tools/b3dm2gltf/: CMakeLists.txt  main.cpp
tools/gltfpack/: CMakeLists.txt  gltfpack.cpp  gltfpack.h  mesh.cpp  parseobj.cpp  stream.cpp  write.cpp
tools/gui/: CMakeLists.txt  main.cpp
tools/model23dtiles/: CMakeLists.txt  main.cpp
tools/osgconv/: CMakeLists.txt  main.cpp
tools/simplifier/: CMakeLists.txt  main.cpp
tools/texturepacker/: CMakeLists.txt  main.cpp
